# conan2-template

./: CMakeLists.txt  build.sh  conanfile.txt  readme.md
src/: main.cpp
